--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
-# PHP
 phpfpm:
   restart: always
-  image: php:7.0.2-fpm
-  # image: php:5.6.17-fpm
+  build: ./docker-php7full
+#  image: php:5.6.17-fpm
   volumes:
-    # - ./php-fpm-7/php-fpm.conf:/usr/local/etc/php-fpm.conf
-    # - ./php-fpm-7/php.ini:/usr/local/etc/php/php.ini
+    - ./php-fpm-7/fpm-conf:/usr/local/etc
+    - ./php-fpm-7/ini:/usr/local/etc/php
     - ./app:/var/www/html
     - ./log/php-fpm:/var/log/php-fpm
   links:
     - db:db
     - es:es
-# NGINX
+
 nginx:
   restart: always
   image: nginx
@@ -23,27 +22,42 @@ nginx:
     - ./nginx/vhost.conf:/etc/nginx/conf.d/default.conf
     - ./app:/var/www/html
     - ./log/nginx:/var/log/nginx
-# MYSQL
+
 db:
-  restart: always
-  image: mysql
+  container_name: db
+  image: mysql:5.6.27
   ports:
     - "3306:3306"
   environment:
-    MYSQL_ROOT_PASSWORD: 123456
-    MYSQL_USER: user
-    MYSQL_PASSWORD: password
-    MYSQL_DATABASE: database
+    - MYSQL_ROOT_PASSWORD=root
+    - MYSQL_HOST=db
+    - MYSQL_DATABASE=pampam
+    - MYSQL_USER=lukas
+    - MYSQL_PASSWORD=lukas
   volumes:
-    - ./mysql/databases:/var/lib/mysql
+    - ./mysql/script/:/script:rw
     - ./log/mysql:/var/log/mysql
-es:
-  image: elasticsearch:2.1.1
-  ports:
-    - "9200:9200"
-  # volumes:
-    # - ./es:/usr/share/elasticsearch/data
+    - ./mysql/databases:/var/lib/mysql
+  command: "/script/permissions.sh"
+
 pma:
   image: phpmyadmin/phpmyadmin
   ports:
     - "8080:8080"
+  links:
+    - db:db
+  environment:
+    - PMA_HOST=db
+    - PMA_USER=root
+    - PMA_PASSWORD=root
+
+es:
+#  image: elasticsearch:2.1.1
+  image: elasticsearch:1.7.4
+  ports:
+    - "9200:9200"
+  volumes:
+    - ./es:/usr/share/elasticsearch/data
+    - ./es/script/:/script:rw
+    - ./log/es:/var/log/elasticsearch
+  command: "/script/permissions.sh"
