--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -17,26 +17,27 @@ server {
 	#	rewrite ^(.*)$ /app.php/$1 last;
 	#}
 
-	location / {
-		index index.php;
-	}
+    location / {
+        index index.php;
+    }
 
-	location ~ \.php$ {
-		fastcgi_pass phpfpm:9000;
-		fastcgi_index index.php;
-		fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		include        /etc/nginx/fastcgi_params;
-	}
+    location ~ \.php$ {
+        include        /etc/nginx/fastcgi_params;
+        fastcgi_pass phpfpm:9000;
+        fastcgi_index index.php;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
-	location  /php/fpm/status {
-		fastcgi_pass phpfpm:9000;
-		fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		include        /etc/nginx/fastcgi_params;
-	}
+    }
 
-	location /php/fpm/ping {
-		fastcgi_pass phpfpm:9000;
-		fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		include        /etc/nginx/fastcgi_params;
-	}
+#    location  /php/fpm/status {
+#        fastcgi_pass phpfpm:9000;
+#        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#        include        /etc/nginx/fastcgi_params;
+#    }
+
+#    location /php/fpm/ping {
+#        fastcgi_pass phpfpm:9000;
+#        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#        include        /etc/nginx/fastcgi_params;
+#    }
 }
