--- a/docker-php5full/ini/php.ini
+++ b/docker-php5full/ini/php.ini
@@ -3,3 +3,8 @@ short_open_tag = off
 
 [Date]
 date.timezone = "Europe/Vilnius"
+
+[Extensions]
+extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/pdo_mysql.so
+extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/mysqli.so
+extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/mysql.so
