--- a/docker-php5full/ini/php.ini
+++ b/docker-php5full/ini/php.ini
@@ -5,6 +5,8 @@ short_open_tag = off
 date.timezone = "Europe/Vilnius"
 
 [Extensions]
+extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/mbstring.so
 extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/pdo_mysql.so
 extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/mysqli.so
 extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/mysql.so
+extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so
