--- a/docker-php5full/php-fpm-5.6.yml
+++ b/docker-php5full/php-fpm-5.6.yml
@@ -1,6 +1,4 @@
 phpfpm:
     build: .
     volumes:
-        - ./docker-php7full/entrypoint:/entrypoint
-        - ./log/php-fpm:/var/log/php-fpm
-#        - ./app:/var/www/
+        - ./ini:/usr/local/etc/php
