--- a/nginx/vhost_symfony.conf
+++ b/nginx/vhost_symfony.conf
@@ -1,6 +1,6 @@
 server {
     server_name localhost;
-    root /var/www/html/clean/web;
+    root /var/www/html/symfony-demo/web;
 
     location / {
         # try to serve file directly, fallback to app.php
