--- a/docker-php5full/Dockerfile
+++ b/docker-php5full/Dockerfile
@@ -49,4 +49,33 @@ RUN composer global require "laravel/installer"
 RUN ln -s /root/.composer/vendor/bin/laravel /usr/local/bin/laravel
 RUN PATH=$PATH:/root/.composer/vendor/bin
 
-CMD ["php-fpm"]
+###
+# Setup SSH layer
+RUN apt-get install -y openssh-server
+RUN mkdir /var/run/sshd
+RUN echo 'root:screencast' | chpasswd
+RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+
+# SSH login fix. Otherwise user is kicked off after login
+RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
+
+ENV NOTVISIBLE "in users profile"
+RUN echo "export VISIBLE=now" >> /etc/profile
+
+EXPOSE 22
+###
+
+# Add supervisor
+RUN apt-get install -y supervisor
+
+# Cleanup
+RUN apt-get clean && apt-get autoclean && apt-get autoremove
+
+
+ADD ./ini/php.ini /usr/local/etc/php/php.ini
+ADD ./entrypoint /entrypoint/entrypoint.sh
+ADD ./supervisor /etc/supervisor/conf.d
+
+VOLUME ["/etc/supervisor/conf.d"]
+
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
